--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,4 +1,5 @@
 version: 0.2
+
 phases:
   install:
     commands:
@@ -6,8 +7,9 @@ phases:
       - npm install
   build:
     commands:
-      - echo Building the application
-      - npm run build
+      - echo No build needed
+
 artifacts:
   files:
     - '**/*'
+
